cli/crates/core/tests/snapshots/test_parser__parse_typescript@exporter.tsx-2.snap
---
source: crates/core/tests/test_parser.rs
expression: "&parser::Module::new(&RelativePathBuf::from_path(path.strip_prefix(&project_root).unwrap()).unwrap(),\n&project_root, &module_resolver,).unwrap()"
input_file: samples/typescript/src/module-decls/wildcard-import/exporter.tsx
---
source_path: src/module-decls/wildcard-import/exporter.tsx
id:
  hash: "8677053067410111665"
  path: src/module-decls/wildcard-import/exporter.tsx
  package_name: UNKNOWN
  mtype: local
created_at: ~
updated_at: ~
exports:
  - source:
      Internal: "exported#1"
    exported_name: exported
  - source:
      External:
        symbol: "<wildcard>#0"
        source:
          hash: "16957890942232978691"
          path: src/module-decls/wildcard-import/sample
          package_name: UNKNOWN
          mtype: local
    exported_name: "<wildcard>"
declarations:
  - symbol: "React#1"
    source:
      hash: "8677053067410111665"
      path: src/module-decls/wildcard-import/exporter.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "ExternalSymbol<SymbolWithSource { symbol: Symbol { name: Atom('default' type=static), context: #0 }, source: ModuleId { hash: 11002248552354871051, path: \"\", pkg_name: \"react\", mtype: Package } }>"
    inferred_type:
      TypeOf:
        symbol:
          symbol: "default#0"
          source:
            hash: "11002248552354871051"
            path: ""
            package_name: react
            mtype: package
        is_local: false
    start:
      line: 1
      column: 8
    end:
      line: 1
      column: 13
  - symbol: "exported#1"
    source:
      hash: "8677053067410111665"
      path: src/module-decls/wildcard-import/exporter.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<declaration>"
    inferred_type:
      Function:
        - JSX
    start:
      line: 3
      column: 8
    end:
      line: 5
      column: 2
scopes:
  - owner: "__global#0"
    parent: ~
    children:
      - "exported#1"
      - "exported#1"
    references:
      - "React#1"
      - "div#2"
      - "exported#1"
    jsx_references:
      - "div#2"
  - owner: "exported#1"
    parent: "__global#0"
    children: []
    references:
      - "div#2"
    jsx_references:
      - "div#2"
  - owner: "exported#1"
    parent: "__global#0"
    children: []
    references:
      - "div#2"
    jsx_references:
      - "div#2"
body:
  - type: ImportDeclaration
    span:
      start: 1
      end: 27
      ctxt: 0
    specifiers:
      - type: ImportDefaultSpecifier
        span:
          start: 8
          end: 13
          ctxt: 0
        local:
          type: Identifier
          span:
            start: 8
            end: 13
            ctxt: 1
          value: React
          optional: false
    source:
      type: StringLiteral
      span:
        start: 19
        end: 26
        ctxt: 0
      value: react
      raw: "\"react\""
    typeOnly: false
    asserts: ~
  - type: ExportDeclaration
    span:
      start: 29
      end: 91
      ctxt: 0
    declaration:
      async: false
      body:
        type: BlockStatement
        span:
          start: 56
          end: 91
          ctxt: 0
        stmts:
          - type: ReturnStatement
            span:
              start: 62
              end: 89
              ctxt: 0
            argument:
              type: JSXElement
              span:
                start: 69
                end: 88
                ctxt: 0
              opening:
                type: JSXOpeningElement
                name:
                  type: Identifier
                  span:
                    start: 70
                    end: 73
                    ctxt: 2
                  value: div
                  optional: false
                span:
                  start: 69
                  end: 74
                  ctxt: 0
                attributes: []
                selfClosing: false
                typeArguments: ~
              children:
                - type: JSXText
                  span:
                    start: 74
                    end: 82
                    ctxt: 0
                  value: exported
                  raw: exported
              closing:
                type: JSXClosingElement
                span:
                  start: 82
                  end: 88
                  ctxt: 0
                name:
                  type: Identifier
                  span:
                    start: 84
                    end: 87
                    ctxt: 2
                  value: div
                  optional: false
      declare: false
      decorators: []
      generator: false
      identifier:
        type: Identifier
        span:
          start: 45
          end: 53
          ctxt: 1
        value: exported
        optional: false
      params: []
      returnType: ~
      span:
        start: 36
        end: 91
        ctxt: 0
      type: FunctionDeclaration
      typeParameters: ~
  - type: ExportAllDeclaration
    span:
      start: 93
      end: 118
      ctxt: 0
    source:
      type: StringLiteral
      span:
        start: 107
        end: 117
        ctxt: 0
      value: "./sample"
      raw: "\"./sample\""
    asserts: ~
