cli/crates/core/tests/snapshots/test_parser__parse_typescript@global-hoisted.tsx-2.snap
---
source: crates/core/tests/test_parser.rs
expression: "&parser::Module::new(&RelativePathBuf::from_path(path.strip_prefix(&project_root).unwrap()).unwrap(),\n&project_root, &module_resolver,).unwrap()"
input_file: samples/typescript/src/functional-component/return-var/global-hoisted.tsx
---
source_path: src/functional-component/return-var/global-hoisted.tsx
id:
  hash: "2863967309112980156"
  path: src/functional-component/return-var/global-hoisted.tsx
  package_name: UNKNOWN
  mtype: local
created_at: ~
updated_at: ~
exports:
  - source:
      Internal: "Sample#1"
    exported_name: default
declarations:
  - symbol: "React#1"
    source:
      hash: "2863967309112980156"
      path: src/functional-component/return-var/global-hoisted.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "ExternalSymbol<SymbolWithSource { symbol: Symbol { name: Atom('default' type=static), context: #0 }, source: ModuleId { hash: 11002248552354871051, path: \"\", pkg_name: \"react\", mtype: Package } }>"
    inferred_type:
      TypeOf:
        symbol:
          symbol: "default#0"
          source:
            hash: "11002248552354871051"
            path: ""
            package_name: react
            mtype: package
        is_local: false
    start:
      line: 1
      column: 8
    end:
      line: 1
      column: 13
  - symbol: "Sample#1"
    source:
      hash: "2863967309112980156"
      path: src/functional-component/return-var/global-hoisted.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<expression>"
    inferred_type:
      Function:
        - TypeOf:
            symbol:
              symbol: "component#1"
              source:
                hash: "2863967309112980156"
                path: src/functional-component/return-var/global-hoisted.tsx
                package_name: UNKNOWN
                mtype: local
            is_local: true
    start:
      line: 3
      column: 16
    end:
      line: 5
      column: 2
  - symbol: "bool#2"
    source:
      hash: "2863967309112980156"
      path: src/functional-component/return-var/global-hoisted.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "Parameter<Symbol { name: Atom('Sample' type=inline), context: #1 }>[0]"
    inferred_type:
      ParameterOf:
        function:
          symbol: "Sample#1"
          source:
            hash: "2863967309112980156"
            path: src/functional-component/return-var/global-hoisted.tsx
            package_name: UNKNOWN
            mtype: local
        index: 0
    start:
      line: 3
      column: 32
    end:
      line: 3
      column: 36
  - symbol: "component#1"
    source:
      hash: "2863967309112980156"
      path: src/functional-component/return-var/global-hoisted.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<expression>"
    inferred_type: JSX
    start:
      line: 8
      column: 5
    end:
      line: 8
      column: 14
scopes:
  - owner: "__global#0"
    parent: ~
    children:
      - "Sample#1"
      - "Sample#1"
      - "component#1"
    references:
      - "React#1"
      - "Sample#1"
      - "bool#2"
      - "component#1"
      - "div#3"
    jsx_references:
      - "div#3"
  - owner: "Sample#1"
    parent: "__global#0"
    children: []
    references:
      - "bool#2"
      - "component#1"
    jsx_references: []
  - owner: "Sample#1"
    parent: "__global#0"
    children: []
    references:
      - "bool#2"
      - "component#1"
    jsx_references: []
  - owner: "component#1"
    parent: "__global#0"
    children: []
    references:
      - "div#3"
    jsx_references:
      - "div#3"
body:
  - type: ImportDeclaration
    span:
      start: 1
      end: 27
      ctxt: 0
    specifiers:
      - type: ImportDefaultSpecifier
        span:
          start: 8
          end: 13
          ctxt: 0
        local:
          type: Identifier
          span:
            start: 8
            end: 13
            ctxt: 1
          value: React
          optional: false
    source:
      type: StringLiteral
      span:
        start: 19
        end: 26
        ctxt: 0
      value: react
      raw: "\"react\""
    typeOnly: false
    asserts: ~
  - type: ExportDefaultDeclaration
    span:
      start: 29
      end: 91
      ctxt: 0
    decl:
      async: false
      body:
        type: BlockStatement
        span:
          start: 66
          end: 91
          ctxt: 0
        stmts:
          - type: ReturnStatement
            span:
              start: 72
              end: 89
              ctxt: 0
            argument:
              type: Identifier
              span:
                start: 79
                end: 88
                ctxt: 1
              value: component
              optional: false
      decorators: []
      generator: false
      identifier:
        type: Identifier
        span:
          start: 53
          end: 59
          ctxt: 1
        value: Sample
        optional: false
      params:
        - type: Parameter
          span:
            start: 60
            end: 64
            ctxt: 0
          decorators: []
          pat:
            optional: false
            span:
              start: 60
              end: 64
              ctxt: 2
            type: Identifier
            typeAnnotation: ~
            value: bool
      returnType: ~
      span:
        start: 44
        end: 91
        ctxt: 0
      type: FunctionExpression
      typeParameters: ~
  - type: VariableDeclaration
    span:
      start: 128
      end: 162
      ctxt: 0
    kind: var
    declare: false
    declarations:
      - type: VariableDeclarator
        span:
          start: 132
          end: 161
          ctxt: 0
        id:
          optional: false
          span:
            start: 132
            end: 141
            ctxt: 1
          type: Identifier
          typeAnnotation: ~
          value: component
        init:
          type: JSXElement
          span:
            start: 144
            end: 161
            ctxt: 0
          opening:
            type: JSXOpeningElement
            name:
              type: Identifier
              span:
                start: 145
                end: 148
                ctxt: 3
              value: div
              optional: false
            span:
              start: 144
              end: 149
              ctxt: 0
            attributes: []
            selfClosing: false
            typeArguments: ~
          children:
            - type: JSXText
              span:
                start: 149
                end: 155
                ctxt: 0
              value: Sample
              raw: Sample
          closing:
            type: JSXClosingElement
            span:
              start: 155
              end: 161
              ctxt: 0
            name:
              type: Identifier
              span:
                start: 157
                end: 160
                ctxt: 3
              value: div
              optional: false
        definite: false
