cli/crates/core/tests/snapshots/test_parser__parse_typescript@if-else-function-imported.tsx-2.snap
---
source: crates/core/tests/test_parser.rs
expression: "&parser::Module::new(&RelativePathBuf::from_path(path.strip_prefix(&project_root).unwrap()).unwrap(),\n&project_root, &module_resolver,).unwrap()"
input_file: samples/typescript/src/functional-component/control-statements/conditional-if/return-var/imported/if-else-function-imported.tsx
---
source_path: src/functional-component/control-statements/conditional-if/return-var/imported/if-else-function-imported.tsx
id:
  hash: "7109160199459794716"
  path: src/functional-component/control-statements/conditional-if/return-var/imported/if-else-function-imported.tsx
  package_name: UNKNOWN
  mtype: local
created_at: ~
updated_at: ~
exports:
  - source:
      Internal: "Sample#1"
    exported_name: Sample
declarations:
  - symbol: "React#1"
    source:
      hash: "7109160199459794716"
      path: src/functional-component/control-statements/conditional-if/return-var/imported/if-else-function-imported.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "ExternalSymbol<SymbolWithSource { symbol: Symbol { name: Atom('default' type=static), context: #0 }, source: ModuleId { hash: 11002248552354871051, path: \"\", pkg_name: \"react\", mtype: Package } }>"
    inferred_type:
      TypeOf:
        symbol:
          symbol: "default#0"
          source:
            hash: "11002248552354871051"
            path: ""
            package_name: react
            mtype: package
        is_local: false
    start:
      line: 1
      column: 8
    end:
      line: 1
      column: 13
  - symbol: "Sample#1"
    source:
      hash: "7109160199459794716"
      path: src/functional-component/control-statements/conditional-if/return-var/imported/if-else-function-imported.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<declaration>"
    inferred_type:
      Function:
        - TypeOf:
            symbol:
              symbol: "result#2"
              source:
                hash: "7109160199459794716"
                path: src/functional-component/control-statements/conditional-if/return-var/imported/if-else-function-imported.tsx
                package_name: UNKNOWN
                mtype: local
            is_local: true
    start:
      line: 4
      column: 8
    end:
      line: 14
      column: 2
  - symbol: "bool#2"
    source:
      hash: "7109160199459794716"
      path: src/functional-component/control-statements/conditional-if/return-var/imported/if-else-function-imported.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "Parameter<Symbol { name: Atom('Sample' type=inline), context: #1 }>[0]"
    inferred_type:
      ParameterOf:
        function:
          symbol: "Sample#1"
          source:
            hash: "7109160199459794716"
            path: src/functional-component/control-statements/conditional-if/return-var/imported/if-else-function-imported.tsx
            package_name: UNKNOWN
            mtype: local
        index: 0
    start:
      line: 4
      column: 24
    end:
      line: 4
      column: 37
  - symbol: "renderSample#1"
    source:
      hash: "7109160199459794716"
      path: src/functional-component/control-statements/conditional-if/return-var/imported/if-else-function-imported.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "ExternalSymbol<SymbolWithSource { symbol: Symbol { name: Atom('renderSample' type=dynamic), context: #1 }, source: ModuleId { hash: 8016342090393809860, path: \"src/functional-component/control-statements/conditional-if/return-var/imported/utils\", pkg_name: \"UNKNOWN\", mtype: Local } }>"
    inferred_type:
      TypeOf:
        symbol:
          symbol: "renderSample#1"
          source:
            hash: "8016342090393809860"
            path: src/functional-component/control-statements/conditional-if/return-var/imported/utils
            package_name: UNKNOWN
            mtype: local
        is_local: false
    start:
      line: 2
      column: 26
    end:
      line: 2
      column: 38
  - symbol: "result#2"
    source:
      hash: "7109160199459794716"
      path: src/functional-component/control-statements/conditional-if/return-var/imported/if-else-function-imported.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "<empty>"
    inferred_type: Unknown
    start:
      line: 5
      column: 9
    end:
      line: 5
      column: 15
  - symbol: "returnFortyTwo#1"
    source:
      hash: "7109160199459794716"
      path: src/functional-component/control-statements/conditional-if/return-var/imported/if-else-function-imported.tsx
      package_name: UNKNOWN
      mtype: local
    definition: "ExternalSymbol<SymbolWithSource { symbol: Symbol { name: Atom('returnFortyTwo' type=dynamic), context: #1 }, source: ModuleId { hash: 8016342090393809860, path: \"src/functional-component/control-statements/conditional-if/return-var/imported/utils\", pkg_name: \"UNKNOWN\", mtype: Local } }>"
    inferred_type:
      TypeOf:
        symbol:
          symbol: "returnFortyTwo#1"
          source:
            hash: "8016342090393809860"
            path: src/functional-component/control-statements/conditional-if/return-var/imported/utils
            package_name: UNKNOWN
            mtype: local
        is_local: false
    start:
      line: 2
      column: 10
    end:
      line: 2
      column: 24
scopes:
  - owner: "__global#0"
    parent: ~
    children:
      - "Sample#1"
      - "Sample#1"
    references:
      - "React#1"
      - "Sample#1"
      - "bool#2"
      - "renderSample#1"
      - "result#2"
      - "returnFortyTwo#1"
    jsx_references: []
  - owner: "Sample#1"
    parent: "__global#0"
    children: []
    references:
      - "bool#2"
      - "renderSample#1"
      - "result#2"
      - "returnFortyTwo#1"
    jsx_references: []
  - owner: "Sample#1"
    parent: "__global#0"
    children: []
    references:
      - "bool#2"
      - "renderSample#1"
      - "result#2"
      - "returnFortyTwo#1"
    jsx_references: []
body:
  - type: ImportDeclaration
    span:
      start: 1
      end: 27
      ctxt: 0
    specifiers:
      - type: ImportDefaultSpecifier
        span:
          start: 8
          end: 13
          ctxt: 0
        local:
          type: Identifier
          span:
            start: 8
            end: 13
            ctxt: 1
          value: React
          optional: false
    source:
      type: StringLiteral
      span:
        start: 19
        end: 26
        ctxt: 0
      value: react
      raw: "\"react\""
    typeOnly: false
    asserts: ~
  - type: ImportDeclaration
    span:
      start: 28
      end: 83
      ctxt: 0
    specifiers:
      - type: ImportSpecifier
        span:
          start: 37
          end: 51
          ctxt: 0
        local:
          type: Identifier
          span:
            start: 37
            end: 51
            ctxt: 1
          value: returnFortyTwo
          optional: false
        imported: ~
        isTypeOnly: false
      - type: ImportSpecifier
        span:
          start: 53
          end: 65
          ctxt: 0
        local:
          type: Identifier
          span:
            start: 53
            end: 65
            ctxt: 1
          value: renderSample
          optional: false
        imported: ~
        isTypeOnly: false
    source:
      type: StringLiteral
      span:
        start: 73
        end: 82
        ctxt: 0
      value: "./utils"
      raw: "\"./utils\""
    typeOnly: false
    asserts: ~
  - type: ExportDeclaration
    span:
      start: 85
      end: 266
      ctxt: 0
    declaration:
      async: false
      body:
        type: BlockStatement
        span:
          start: 123
          end: 266
          ctxt: 0
        stmts:
          - type: VariableDeclaration
            span:
              start: 129
              end: 140
              ctxt: 0
            kind: let
            declare: false
            declarations:
              - type: VariableDeclarator
                span:
                  start: 133
                  end: 139
                  ctxt: 0
                id:
                  optional: false
                  span:
                    start: 133
                    end: 139
                    ctxt: 2
                  type: Identifier
                  typeAnnotation: ~
                  value: result
                init: ~
                definite: false
          - type: IfStatement
            span:
              start: 146
              end: 244
              ctxt: 0
            test:
              type: Identifier
              span:
                start: 150
                end: 154
                ctxt: 2
              value: bool
              optional: false
            consequent:
              type: BlockStatement
              span:
                start: 156
                end: 198
                ctxt: 0
              stmts:
                - type: ExpressionStatement
                  span:
                    start: 166
                    end: 192
                    ctxt: 0
                  expression:
                    type: AssignmentExpression
                    span:
                      start: 166
                      end: 191
                      ctxt: 0
                    operator: "="
                    left:
                      optional: false
                      span:
                        start: 166
                        end: 172
                        ctxt: 2
                      type: Identifier
                      typeAnnotation: ~
                      value: result
                    right:
                      type: CallExpression
                      span:
                        start: 175
                        end: 191
                        ctxt: 0
                      callee:
                        type: Identifier
                        span:
                          start: 175
                          end: 189
                          ctxt: 1
                        value: returnFortyTwo
                        optional: false
                      arguments: []
                      typeArguments: ~
            alternate:
              type: BlockStatement
              span:
                start: 204
                end: 244
                ctxt: 0
              stmts:
                - type: ExpressionStatement
                  span:
                    start: 214
                    end: 238
                    ctxt: 0
                  expression:
                    type: AssignmentExpression
                    span:
                      start: 214
                      end: 237
                      ctxt: 0
                    operator: "="
                    left:
                      optional: false
                      span:
                        start: 214
                        end: 220
                        ctxt: 2
                      type: Identifier
                      typeAnnotation: ~
                      value: result
                    right:
                      type: CallExpression
                      span:
                        start: 223
                        end: 237
                        ctxt: 0
                      callee:
                        type: Identifier
                        span:
                          start: 223
                          end: 235
                          ctxt: 1
                        value: renderSample
                        optional: false
                      arguments: []
                      typeArguments: ~
          - type: ReturnStatement
            span:
              start: 250
              end: 264
              ctxt: 0
            argument:
              type: Identifier
              span:
                start: 257
                end: 263
                ctxt: 2
              value: result
              optional: false
      declare: false
      decorators: []
      generator: false
      identifier:
        type: Identifier
        span:
          start: 101
          end: 107
          ctxt: 1
        value: Sample
        optional: false
      params:
        - type: Parameter
          span:
            start: 108
            end: 121
            ctxt: 0
          decorators: []
          pat:
            optional: false
            span:
              start: 108
              end: 121
              ctxt: 2
            type: Identifier
            typeAnnotation:
              type: TsTypeAnnotation
              span:
                start: 112
                end: 121
                ctxt: 0
              typeAnnotation:
                type: TsKeywordType
                span:
                  start: 114
                  end: 121
                  ctxt: 0
                kind: boolean
            value: bool
      returnType: ~
      span:
        start: 92
        end: 266
        ctxt: 0
      type: FunctionDeclaration
      typeParameters: ~
